--- a/configuration/config_copy.env
+++ b/configuration/config_copy.env
@@ -1,4 +1,7 @@
 PORT=4000
 MOGODB_URI=mongodb+srv://<username>:<Password>.iwhkm7g.mongodb.net/?retryWrites=true&w=majority
-
+JWT_SECRET_KEY=
+NODE_ENV=development/production
+JWT_EXPIRES=
+COOKIE_EXPIRE
 
