cors  and model adjustment

--- a/configuration/config_copy.env
+++ b/configuration/config_copy.env
@@ -3,5 +3,6 @@ MOGODB_URI=mongodb+srv://<username>:<Password>.iwhkm7g.mongodb.net/?retryWrites=
 JWT_SECRET_KEY=
 NODE_ENV=development/production
 JWT_EXPIRES=
-COOKIE_EXPIRE
+COOKIE_EXPIRE=
+FRONTEND_URL=
 
